[gd_scene load_steps=30 format=2]

[ext_resource path="res://common/UI/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://Screens/Path2D/BoardOfCards/BoardCard.gd" type="Script" id=2]
[ext_resource path="res://Screens/Path/BoardOfCards3D/BoardOfCards3D.gd" type="Script" id=3]
[ext_resource path="res://common/UI/fonts/SmallFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Screens/Path/BoardOfCards3D/PathCard.gd" type="Script" id=5]
[ext_resource path="res://common/enemy.png" type="Texture" id=6]
[ext_resource path="res://common/blackhole.png" type="Texture" id=7]
[ext_resource path="res://common/Player/player.png" type="Texture" id=8]
[ext_resource path="res://common/Environment/space_environment_meshlib.tres" type="MeshLibrary" id=9]

[sub_resource type="Curve3D" id=2]
_data = {
"points": PoolVector3Array(  ),
"tilts": PoolRealArray(  )
}

[sub_resource type="QuadMesh" id=3]
size = Vector2( 1, 1.4 )

[sub_resource type="ViewportTexture" id=4]
viewport_path = NodePath("Hand/PathCard1/PathFollow/BoardCard/Viewport")

[sub_resource type="SpatialMaterial" id=5]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
flags_albedo_tex_force_srgb = true
params_depth_draw_mode = 3
albedo_texture = SubResource( 4 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.5, 1, 0.01 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.921569, 0.337255, 0.294118, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 5
shadow_offset = Vector2( 2, 2 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.152941, 0.152941, 0.211765, 1 )
border_width_top = 4
border_color = Color( 0.921569, 0.337255, 0.294118, 1 )

[sub_resource type="StyleBoxLine" id=9]
color = Color( 0.921569, 0.337255, 0.294118, 1 )

[sub_resource type="Curve3D" id=10]
_data = {
"points": PoolVector3Array(  ),
"tilts": PoolRealArray(  )
}

[sub_resource type="ViewportTexture" id=11]
viewport_path = NodePath("Hand/PathCard2/PathFollow/BoardCard/Viewport")

[sub_resource type="SpatialMaterial" id=12]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
flags_albedo_tex_force_srgb = true
params_depth_draw_mode = 3
albedo_texture = SubResource( 11 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.921569, 0.337255, 0.294118, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 5
shadow_offset = Vector2( 2, 2 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.152941, 0.152941, 0.211765, 1 )
border_width_top = 4
border_color = Color( 0.921569, 0.337255, 0.294118, 1 )

[sub_resource type="StyleBoxLine" id=15]
color = Color( 0.921569, 0.337255, 0.294118, 1 )

[sub_resource type="Curve3D" id=16]
_data = {
"points": PoolVector3Array(  ),
"tilts": PoolRealArray(  )
}

[sub_resource type="ViewportTexture" id=17]
viewport_path = NodePath("Hand/PathCard3/PathFollow/BoardCard/Viewport")

[sub_resource type="SpatialMaterial" id=18]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
flags_albedo_tex_force_srgb = true
params_depth_draw_mode = 3
albedo_texture = SubResource( 17 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.921569, 0.337255, 0.294118, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 5
shadow_offset = Vector2( 2, 2 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.152941, 0.152941, 0.211765, 1 )
border_width_top = 4
border_color = Color( 0.921569, 0.337255, 0.294118, 1 )

[sub_resource type="StyleBoxLine" id=21]
color = Color( 0.921569, 0.337255, 0.294118, 1 )

[node name="BoardOfCards3D" type="Spatial"]
script = ExtResource( 3 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 1, 5.05, 5.05 )
fov = 55.0

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.707107, 0.5, 0.5, 0, -0.707107, 0.707107, 0.707107, -0.5, -0.5, 0, 0, 0 )
shadow_enabled = true
shadow_bias = 0.05
directional_shadow_blend_splits = true
directional_shadow_normal_bias = 0.2
directional_shadow_max_distance = 50.0

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource( 9 )
cell_center_y = false
data = {
"cells": PoolIntArray( -65536, 0, 19, -65535, 0, 1441804, -65534, 0, 12, -65533, 0, 12, -3, 0, 1048585, -2, 0, 1048585, -1, 0, 1048585, -65536, 1, 19, -65535, 1, 1441804, -65534, 1, 12, -65533, 1, 12, -3, 1, 1048585, -2, 1, 1048585, -1, 1, 1048585, -65536, 2, 19, -65535, 2, 12, -65534, 2, 12, -65533, 2, 12, -3, 2, 1441801, -2, 2, 1441801, -1, 2, 1441801, -65536, 65534, 19, -65535, 65534, 1441804, -65534, 65534, 1048582, -65533, 65534, 655366, -3, 65534, 655375, -2, 65534, 1441807, -1, 65534, 9, -65536, 65535, 19, -65535, 65535, 1441804, -65534, 65535, 12, -65533, 65535, 1048582, -3, 65535, 15, -2, 65535, 1048585, -1, 65535, 1048585 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, -1, 0 )
}

[node name="Slots" type="Spatial" parent="."]

[node name="Slot1" type="Position3D" parent="Slots"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.15, 0.01, 1 )

[node name="Slot2" type="Position3D" parent="Slots"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.01, 1 )

[node name="Slot3" type="Position3D" parent="Slots"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.15, 0.01, 1 )

[node name="Hand" type="Spatial" parent="."]

[node name="PathCard1" type="Path" parent="Hand" groups=["Draw"]]
curve = SubResource( 2 )
script = ExtResource( 5 )

[node name="PathFollow" type="PathFollow" parent="Hand/PathCard1"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0.5, 2.485, 4.475 )
rotation_mode = 0
loop = false

[node name="BoardCard" type="MeshInstance" parent="Hand/PathCard1/PathFollow"]
mesh = SubResource( 3 )
material/0 = SubResource( 5 )

[node name="Area" type="Area" parent="Hand/PathCard1/PathFollow/BoardCard"]

[node name="CollisionShape" type="CollisionShape" parent="Hand/PathCard1/PathFollow/BoardCard/Area"]
shape = SubResource( 6 )

[node name="Viewport" type="Viewport" parent="Hand/PathCard1/PathFollow/BoardCard"]
size = Vector2( 250, 350 )
transparent_bg = true
handle_input_locally = false
hdr = false
disable_3d = true
render_target_v_flip = true

[node name="BoardCard" type="Node2D" parent="Hand/PathCard1/PathFollow/BoardCard/Viewport"]
script = ExtResource( 2 )
card_art = ExtResource( 7 )
rules_text = "Destroy all [color=red]Ships[/color]."
name_text = "Black Hole"

[node name="CardBorder" type="PanelContainer" parent="Hand/PathCard1/PathFollow/BoardCard/Viewport/BoardCard"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 250.0
margin_bottom = 350.0
rect_min_size = Vector2( 250, 350 )
rect_pivot_offset = Vector2( 125, 175 )
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Hand/PathCard1/PathFollow/BoardCard/Viewport/BoardCard/CardBorder"]
margin_left = 4.0
margin_top = 4.0
margin_right = 246.0
margin_bottom = 346.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="CardArt" type="TextureRect" parent="Hand/PathCard1/PathFollow/BoardCard/Viewport/BoardCard/CardBorder/VBoxContainer"]
margin_right = 242.0
margin_bottom = 214.0
mouse_filter = 2
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
stretch_mode = 4

[node name="TextPanel" type="PanelContainer" parent="Hand/PathCard1/PathFollow/BoardCard/Viewport/BoardCard/CardBorder/VBoxContainer"]
margin_top = 214.0
margin_right = 242.0
margin_bottom = 342.0
rect_min_size = Vector2( 0, 128 )
mouse_filter = 2
size_flags_vertical = 9
custom_styles/panel = SubResource( 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="Hand/PathCard1/PathFollow/BoardCard/Viewport/BoardCard/CardBorder/VBoxContainer/TextPanel"]
margin_top = 4.0
margin_right = 242.0
margin_bottom = 128.0
mouse_filter = 2
custom_constants/separation = 2

[node name="Label" type="Label" parent="Hand/PathCard1/PathFollow/BoardCard/Viewport/BoardCard/CardBorder/VBoxContainer/TextPanel/VBoxContainer"]
margin_right = 242.0
margin_bottom = 45.0
size_flags_vertical = 1
text = "Black Hole"
align = 1

[node name="HSeparator" type="HSeparator" parent="Hand/PathCard1/PathFollow/BoardCard/Viewport/BoardCard/CardBorder/VBoxContainer/TextPanel/VBoxContainer"]
margin_top = 47.0
margin_right = 242.0
margin_bottom = 51.0
mouse_filter = 2
custom_styles/separator = SubResource( 9 )

[node name="RichTextLabel" type="RichTextLabel" parent="Hand/PathCard1/PathFollow/BoardCard/Viewport/BoardCard/CardBorder/VBoxContainer/TextPanel/VBoxContainer"]
margin_top = 53.0
margin_right = 242.0
margin_bottom = 124.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "Destroy all [color=red]Ships[/color]."
text = "Destroy all Ships."
fit_content_height = true

[node name="Tween" type="Tween" parent="Hand/PathCard1"]

[node name="PathCard2" type="Path" parent="Hand" groups=["Draw"]]
curve = SubResource( 10 )
script = ExtResource( 5 )

[node name="PathFollow" type="PathFollow" parent="Hand/PathCard2"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 1, 2.555, 4.545 )
rotation_mode = 0
loop = false

[node name="BoardCard" type="MeshInstance" parent="Hand/PathCard2/PathFollow"]
mesh = SubResource( 3 )
material/0 = SubResource( 12 )

[node name="Area" type="Area" parent="Hand/PathCard2/PathFollow/BoardCard"]

[node name="CollisionShape" type="CollisionShape" parent="Hand/PathCard2/PathFollow/BoardCard/Area"]
shape = SubResource( 6 )

[node name="Viewport" type="Viewport" parent="Hand/PathCard2/PathFollow/BoardCard"]
size = Vector2( 250, 350 )
transparent_bg = true
handle_input_locally = false
hdr = false
disable_3d = true
render_target_v_flip = true

[node name="BoardCard" type="Node2D" parent="Hand/PathCard2/PathFollow/BoardCard/Viewport"]
script = ExtResource( 2 )
card_art = ExtResource( 8 )
rules_text = "When played: Gain 3 [color=aqua]Shields[/color]."
name_text = "Hero Ship"

[node name="CardBorder" type="PanelContainer" parent="Hand/PathCard2/PathFollow/BoardCard/Viewport/BoardCard"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 250.0
margin_bottom = 350.0
rect_min_size = Vector2( 250, 350 )
rect_pivot_offset = Vector2( 125, 175 )
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Hand/PathCard2/PathFollow/BoardCard/Viewport/BoardCard/CardBorder"]
margin_left = 4.0
margin_top = 4.0
margin_right = 246.0
margin_bottom = 346.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="CardArt" type="TextureRect" parent="Hand/PathCard2/PathFollow/BoardCard/Viewport/BoardCard/CardBorder/VBoxContainer"]
margin_right = 242.0
margin_bottom = 214.0
mouse_filter = 2
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
stretch_mode = 4

[node name="TextPanel" type="PanelContainer" parent="Hand/PathCard2/PathFollow/BoardCard/Viewport/BoardCard/CardBorder/VBoxContainer"]
margin_top = 214.0
margin_right = 242.0
margin_bottom = 342.0
rect_min_size = Vector2( 0, 128 )
mouse_filter = 2
size_flags_vertical = 9
custom_styles/panel = SubResource( 14 )

[node name="VBoxContainer" type="VBoxContainer" parent="Hand/PathCard2/PathFollow/BoardCard/Viewport/BoardCard/CardBorder/VBoxContainer/TextPanel"]
margin_top = 4.0
margin_right = 242.0
margin_bottom = 128.0
mouse_filter = 2
custom_constants/separation = 2

[node name="Label" type="Label" parent="Hand/PathCard2/PathFollow/BoardCard/Viewport/BoardCard/CardBorder/VBoxContainer/TextPanel/VBoxContainer"]
margin_right = 242.0
margin_bottom = 45.0
size_flags_vertical = 1
text = "Black Hole"
align = 1

[node name="HSeparator" type="HSeparator" parent="Hand/PathCard2/PathFollow/BoardCard/Viewport/BoardCard/CardBorder/VBoxContainer/TextPanel/VBoxContainer"]
margin_top = 47.0
margin_right = 242.0
margin_bottom = 51.0
mouse_filter = 2
custom_styles/separator = SubResource( 15 )

[node name="RichTextLabel" type="RichTextLabel" parent="Hand/PathCard2/PathFollow/BoardCard/Viewport/BoardCard/CardBorder/VBoxContainer/TextPanel/VBoxContainer"]
margin_top = 53.0
margin_right = 242.0
margin_bottom = 124.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "Destroy all [color=red]Ships[/color]."
text = "Destroy all Ships."
fit_content_height = true

[node name="Tween" type="Tween" parent="Hand/PathCard2"]

[node name="PathCard3" type="Path" parent="Hand" groups=["Draw"]]
curve = SubResource( 16 )
script = ExtResource( 5 )

[node name="PathFollow" type="PathFollow" parent="Hand/PathCard3"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 1.5, 2.626, 4.616 )
rotation_mode = 0
loop = false

[node name="BoardCard" type="MeshInstance" parent="Hand/PathCard3/PathFollow"]
mesh = SubResource( 3 )
material/0 = SubResource( 18 )

[node name="Area" type="Area" parent="Hand/PathCard3/PathFollow/BoardCard"]

[node name="CollisionShape" type="CollisionShape" parent="Hand/PathCard3/PathFollow/BoardCard/Area"]
shape = SubResource( 6 )

[node name="Viewport" type="Viewport" parent="Hand/PathCard3/PathFollow/BoardCard"]
size = Vector2( 250, 350 )
transparent_bg = true
handle_input_locally = false
hdr = false
disable_3d = true
render_target_v_flip = true

[node name="BoardCard" type="Node2D" parent="Hand/PathCard3/PathFollow/BoardCard/Viewport"]
script = ExtResource( 2 )
card_art = ExtResource( 6 )
rules_text = "When played: Deal 2 [color=red]Damage[/color]."
name_text = "Enemy Ship"

[node name="CardBorder" type="PanelContainer" parent="Hand/PathCard3/PathFollow/BoardCard/Viewport/BoardCard"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 250.0
margin_bottom = 350.0
rect_min_size = Vector2( 250, 350 )
rect_pivot_offset = Vector2( 125, 175 )
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Hand/PathCard3/PathFollow/BoardCard/Viewport/BoardCard/CardBorder"]
margin_left = 4.0
margin_top = 4.0
margin_right = 246.0
margin_bottom = 346.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="CardArt" type="TextureRect" parent="Hand/PathCard3/PathFollow/BoardCard/Viewport/BoardCard/CardBorder/VBoxContainer"]
margin_right = 242.0
margin_bottom = 214.0
mouse_filter = 2
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
stretch_mode = 4

[node name="TextPanel" type="PanelContainer" parent="Hand/PathCard3/PathFollow/BoardCard/Viewport/BoardCard/CardBorder/VBoxContainer"]
margin_top = 214.0
margin_right = 242.0
margin_bottom = 342.0
rect_min_size = Vector2( 0, 128 )
mouse_filter = 2
size_flags_vertical = 9
custom_styles/panel = SubResource( 20 )

[node name="VBoxContainer" type="VBoxContainer" parent="Hand/PathCard3/PathFollow/BoardCard/Viewport/BoardCard/CardBorder/VBoxContainer/TextPanel"]
margin_top = 4.0
margin_right = 242.0
margin_bottom = 128.0
mouse_filter = 2
custom_constants/separation = 2

[node name="Label" type="Label" parent="Hand/PathCard3/PathFollow/BoardCard/Viewport/BoardCard/CardBorder/VBoxContainer/TextPanel/VBoxContainer"]
margin_right = 242.0
margin_bottom = 45.0
size_flags_vertical = 1
text = "Black Hole"
align = 1

[node name="HSeparator" type="HSeparator" parent="Hand/PathCard3/PathFollow/BoardCard/Viewport/BoardCard/CardBorder/VBoxContainer/TextPanel/VBoxContainer"]
margin_top = 47.0
margin_right = 242.0
margin_bottom = 51.0
mouse_filter = 2
custom_styles/separator = SubResource( 21 )

[node name="RichTextLabel" type="RichTextLabel" parent="Hand/PathCard3/PathFollow/BoardCard/Viewport/BoardCard/CardBorder/VBoxContainer/TextPanel/VBoxContainer"]
margin_top = 53.0
margin_right = 242.0
margin_bottom = 124.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "Destroy all [color=red]Ships[/color]."
text = "Destroy all Ships."
fit_content_height = true

[node name="Tween" type="Tween" parent="Hand/PathCard3"]
